--- a/web/Index.html
+++ b/web/Index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analitzador de paraules</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-    <h6 class="titulo">Analitzador de paraules</h6>
+    <p class="titulo">Analitzador de paraules</p>
     <script src="code.js"></script>
 </body>
 </html>
