--- a/web/Index.html
+++ b/web/Index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p class="titulo">Analitzador de paraules</p>
+    <input type="text" placeholder="Insereix una paraula" class="input">
     <script src="code.js"></script>
 </body>
 </html>
