--- a/web/Index.html
+++ b/web/Index.html
@@ -14,8 +14,21 @@
     <p class="titulo">Analitzador de paraules</p>
     <input id="mainInput" type="text" placeholder="Insereix una paraula" class="input">
     
-    <div class="fondo"></div>
+    <div class="fondo">
+        <div id="silabas"></div>
+        <div id="infoLetras">
+            <h1 id="longitud"></h1>
+            <h1 id="vocales"></h1>
+            <h1 id="consonantes"></h1>
+            <h1 id="diptongos"></h1>
+            <h1 id="triptongos"></h1>
+            <h1 id="acentos"></h1>
+            <h1 id="dieresis"></h1>
+            <ul id="letras"></ul>
+        </div>
+    </div>
     
+    <script type="text/javascript" src="/eel.js"></script>
     <script src="code.js"></script>
 </body>
 </html>
