--- a/web/Index.html
+++ b/web/Index.html
@@ -16,15 +16,17 @@
     
     <div class="fondo">
         <h1 id="errorMessage">Algún dels carácters és invàlid!</h1>
+        <div id="silabasBar"></div>
         <div id="infoLetras">
             <div id="silabas" hidden="true"></div>
             <h1 class="info" id="longitud"></h1>
             <h1 class="info" id="vocales"></h1>
             <h1 class="info" id="consonantes"></h1>
-            <h1 class="info" id="diptongos"></h1>
+            <h1 class="info" id="crecientes"></h1>
+            <h1 class="info" id="decrecientes"></h1>
             <h1 class="info" id="triptongos"></h1>
+            <h1 class="info" id="hiatos"></h1>
             <h1 class="info" id="acentos"></h1>
-            <div id="silabasBar"></div>
         </div>
     </div>
 
