--- a/web/Index.html
+++ b/web/Index.html
@@ -16,7 +16,7 @@
     
     <div class="fondo">
         <h1 id="errorMessage">Algún dels carácters és invàlid!</h1>
-        <div id="silabasBar"></div>
+        <div id="silabasBar" hidden="true"></div>
         <div id="infoLetras">
             <div id="silabas" hidden="true"></div>
             <h1 class="info" id="longitud"></h1>
