--- a/web/Index.html
+++ b/web/Index.html
@@ -32,6 +32,7 @@
             <h1 class="info" id="acentos"></h1>
         </div>
     </div>
+    <info-palabra>matao</info-palabra>
 
     <footer class="footer">
         <h1 class="footer-title">DESARROLLADO POR ALBERTO ATERO GARCÍA Y ALEJANDRO ZUBIRI FUNES</h1>
@@ -48,6 +49,7 @@
     </footer>
     
     <script type="text/javascript" src="/eel.js"></script>
+    <script type="module" src="./components/InfoPalabra.js"></script>
     <script src="code.js"></script>
 </body>
 </html>
