--- a/web/Index.html
+++ b/web/Index.html
@@ -33,6 +33,8 @@
         </div>
     </div>
 
+    <info-palabra>hola</info-palabra>
+
     <footer class="footer">
         <h1 class="footer-title">DESARROLLADO POR ALBERTO ATERO GARCÍA Y ALEJANDRO ZUBIRI FUNES</h1>
         <a href="https://www.santjosepobrer.es/es" target="_blank">Contacto</a>
