retocado codigo, mensaje inicio

--- a/web/Index.html
+++ b/web/Index.html
@@ -18,7 +18,8 @@
     <input id="mainInput" type="text" placeholder="Insereix una paraula" class="input">
     
     <div class="fondo">
-        <h1 id="errorMessage">Algún dels carácters és invàlid!</h1>
+        <h1 id="insertMessage">Insereix una paraula!</h1>
+        <h1 id="errorMessage" hidden="true">Algún dels carácters és invàlid!</h1>
         <div id="silabasBar" hidden="true"></div>
         <div id="infoLetras">
             <div id="silabas" hidden="true"></div>
@@ -32,8 +33,6 @@
             <h1 class="info" id="acentos"></h1>
         </div>
     </div>
-
-    <info-palabra>hola</info-palabra>
 
     <footer class="footer">
         <h1 class="footer-title">DESARROLLADO POR ALBERTO ATERO GARCÍA Y ALEJANDRO ZUBIRI FUNES</h1>
