--- a/web/Index.html
+++ b/web/Index.html
@@ -12,7 +12,9 @@
         <div class="reglas-texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur magni corrupti ipsa officiis velit dolorum pariatur, quo omnis possimus assumenda fugit adipisci officia beatae. Fugit tempora incidunt amet molestiae omnis.</div>
     </div>
     <div id="limitaciones">Limitacions
-        <div class="limitaciones-texto">Les següents paraules no es poden separar correctament:
+        <div class="limitaciones-texto">
+            Es programa no pot analitzar paraules que contenguin lletres o caràcters com "ç", o accents. Convertirà tots els caràcters a lletres en l'alfabet anglès.<br/>
+            Les següents paraules no es poden separar correctament:
             <ul>
                 <li>esdrúixola</li>
                 <li>avantguarda</li>
