--- a/web/Index.html
+++ b/web/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analitzador de paraules</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="icon" href="./assets/Icono-Separador-Sílabas-2.ico"/>
 </head>
 <body>
     <div id="reglas">Regles
