--- a/web/Index.html
+++ b/web/Index.html
@@ -14,10 +14,9 @@
     </div>
     <div id="limitaciones">Limitacions
         <div class="limitaciones-texto">
-            Es programa no pot analitzar paraules que contenguin lletres o caràcters com "ç", o accents. Convertirà tots els caràcters a lletres en l'alfabet anglès.<br/>
             Les següents paraules no es poden separar correctament:
             <ul>
-                <li>esdrúixola</li>
+                <li>etíop</li>
                 <li>avantguarda</li>
                 <li>enginyeria</li>
             </ul>
