--- a/web/Index.html
+++ b/web/Index.html
@@ -13,9 +13,9 @@
         <div class="limitaciones-texto">
             Les següents paraules no es poden separar correctament:
             <ul>
-                <li>etíop</li>
-                <li>avantguarda</li>
                 <li>enginyeria</li>
+                <li>excel·lència</li>
+                <li>tonyina</li>
             </ul>
         Si trobes algun altre error, no dubtis en notificar-ho en l'apartat d'errors al <a target="_blank" href="https://github.com/lemmgua/analizador-palabras/issues">repositori de Github d'es projecte</a>!
         </div>
