--- a/web/Index.html
+++ b/web/Index.html
@@ -16,6 +16,7 @@
                 <li>enginyeria</li>
                 <li>excel·lència</li>
                 <li>tonyina</li>
+                <li>xirimoia</li>
             </ul>
         Si trobes algun altre error, no dubtis en notificar-ho en l'apartat d'errors al <a target="_blank" href="https://github.com/lemmgua/analizador-palabras/issues">repositori de Github d'es projecte</a>!
         </div>
